# twentyfortyeight

./: .env  .gitignore  .project  .pydevproject  LICENSE.md  Pipfile  README.md  demo.py  pyproject.toml  rules.py  scripts.py  test.sh  train.sh
src/: Makefile  demo.py  lookahead.py  rules.py  strategy.py  strategy_evaluator.py
src/game/: board.py  common.py  game.py
src/game/test/: test_board.py  test_game.py
src/nn/: README.md  data.py
src/strategy/: basic.py  strategy.py  strategy_evaluator.py
src/strategy/nn/: data.py  model.py  nn_strategy.py
twentyfortyeight/game/: board.py  common.py  game.py
twentyfortyeight/strategy/: basic.py  strategy_evaluator.py
twentyfortyeight/strategy/nn/: nn_strategy.py
