[tool.poetry]
name = "twentyfortyeight"
version = "0.1.0"
description = "Learning strategies for 2048 game"
authors = ["Grant Gould <ggould256@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
demo = 'twentyfortyeight.demo'
test = 'scripts:test'

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
scipy = "^1.7.1"
tensorflow = "^2.6.0"
keras = "^2.6.0"
h5py = ">=3.1.0,<3.2.0"
numpy = ">=1.19.2,<1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
